[package]
name = "home-ai-rust"
version = "0.1.0"
authors = ["Emil Tomov <bemcho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.29", features = ["contrib","opencv-4"]}
tts = "0.2.2"